--- a/src/routes/projects/backgroundcreator/style.css
+++ b/src/routes/projects/backgroundcreator/style.css
@@ -6,8 +6,8 @@
     margin-left: 3%;
     transition: 0.15s;
 	border-radius: 10px;
-    box-shadow: calc(10px + 0.5vw) calc(10px + 0.5vw) calc((200px + 10vw) / 12) #171717, 
-                calc(-10px - 0.5vw) calc(-10px - 0.5vw) calc((200px + 10vw) / 12) #272727;
+    box-shadow: calc(10px + 0.5vw) calc(10px + 0.5vw) calc((200px + 10vw) / 12) var(--bs1), 
+                calc(-10px - 0.5vw) calc(-10px - 0.5vw) calc((200px + 10vw) / 12) var(--bs2);
 }
 .layerControl {
     display: flex;
