--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -11,14 +11,13 @@
 }
 
 .header h1 {
-	transition: 0.5s;
 	float: left;
 	margin: 0;
 	padding: 0 15px;
 	font-size: 24px;
 	line-height: 56px;
 	font-weight: 400;
-	color: var(--b);
+    color: #1f1f1f;
 }
 
 @media only screen and (max-width: 550px) {
@@ -40,7 +39,7 @@
 	text-align: center;
 	background: rgba(255,255,255,0);
 	text-decoration: none;
-	color: var(--b);
+    color: #1f1f1f;
 	will-change: background-color;
 }
 
