--- a/src/routes/projects/poems/style.css
+++ b/src/routes/projects/poems/style.css
@@ -1,7 +1,7 @@
 fieldset {
     margin: 0 auto;
     border-radius: 5px;
-    width: 50%;
+    width: 60%;
 }
 legend {
     margin: 0 auto;
@@ -12,4 +12,6 @@ legend {
 }
 .poemcontainer {
     font-size: 25px;
+    text-align: left;
+    white-space: pre;
 }
