new build with fixes

--- a/docs/ssr-build/ssr-bundle.81d21.css
+++ b/docs/ssr-build/ssr-bundle.81d21.css
@@ -452,6 +452,7 @@ canvas {
     margin: auto;
     -ms-flex-align: stretch;
         align-items: stretch;
+    padding-bottom: 50px;
 }
 .outputButton__kcWEc {
     -ms-flex-negative: 0;
