--- a/src/components/itembrowser/style.css
+++ b/src/components/itembrowser/style.css
@@ -24,10 +24,9 @@
     box-shadow: -5px 0 5px 0 var(--b);
 }
 .divider~.scrollable {
-    height: calc(100%);
-    margin-top: calc(10vh - 56px);
+    padding-top: calc(10vh - 56px);
     font-size: 24px;
-    width: calc(98% - var(--sw));
+    width: calc(100% - var(--sw));
 }
 ::-webkit-scrollbar {
     display: none;
