add ability to hide item list [itembrowser]

--- a/src/components/itembrowser/style.css
+++ b/src/components/itembrowser/style.css
@@ -12,18 +12,10 @@
     height: calc(100% - 56px + 10vh);
     width: var(--sw);
     overflow-y: scroll;
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
-.divider {
-    position: fixed;
-    top: 0;
-    left: var(--sw);
-    width: 2%;
-    height: calc(100%);
-    background-color: var(--t);
-    box-shadow: -5px 0 5px 0 var(--b);
-}
-.divider~.scrollable {
+.scrollable:last-child {
+    margin: auto;
     padding-top: calc(10vh - 56px);
     font-size: 24px;
     width: calc(100% - var(--sw));
