--- a/src/routes/projects/embedCreator/style.css
+++ b/src/routes/projects/embedCreator/style.css
@@ -20,8 +20,11 @@
     min-width: 0;
     resize: none;
     font-size: calc(20px + 1vmin);
-    border-radius: 0 15px 15px 0;
+    border-radius: 15px 0 0 15px;
     outline: none;
+}
+.textTag:last-child {
+    border-radius: 0 15px 15px 0;
 }
 .descriptionTag,
 .textTag {
@@ -33,9 +36,10 @@
     margin: 0;
 }
 .submitButton {
+    margin: 0 40px 0 40px;
     border: 0;
 	align-self: stretch;
-	width: 400px;
+	padding: 0 50px 0 50px;
 	min-height: 80px;
 	background: var(--t);
 	border-radius: 25px;
@@ -60,7 +64,7 @@
 }
 .outputButton {
     flex-shrink: 0;
-    border-radius: 15px 0 0 15px;
+    border-radius: 0 15px 15px 0;
     display: flex;
     align-items: center;
     border: 0;
