--- a/src/components/cipher/style.css
+++ b/src/components/cipher/style.css
@@ -21,7 +21,7 @@
     box-shadow: 5px 5px 10px var(--bs1),
                 -5px -5px 10px var(--bs2);
     border: none;
-    color: #1f1f1f;
+    color: #313131;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
