--- a/src/routes/projects/embedBrowser/style.css
+++ b/src/routes/projects/embedBrowser/style.css
@@ -70,3 +70,18 @@
     border: none;
     font-size: 1em;
 }
+.loader {
+    border: 16px solid var(--w);
+    border-top: 16px solid var(--t);
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 3s linear infinite;
+    margin: auto;
+    margin-top: 10vh;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
